--- a/Example_BASIC-GUI/kv_build.kv
+++ b/Example_BASIC-GUI/kv_build.kv
@@ -107,7 +107,7 @@
             size_hint: (.19, 0.1)
             pos_hint: {'center_x': 0.27, 'center_y': 0.75}
         Label:
-            text: 'No \'-\', spaces, or country codes'
+            text: 'No dash, spaces, or country codes'
             size_hint: (1, 0.1)
             pos_hint: {'center_x': 0.25, 'center_y': 0.685}
             font_size: 10
